--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddAccount.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddAccount.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -11,7 +12,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.PasswordField?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.AddAccountController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white;">
@@ -33,31 +33,52 @@
                             <VBox.margin>
                                 <Insets top="20.0" />
                             </VBox.margin></Label>
+                  <HBox alignment="CENTER" prefHeight="546.0" prefWidth="871.0" spacing="40.0">
+                     <children>
+                        <VBox maxHeight="350.0" prefHeight="383.0" prefWidth="400.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Identifiants du compte" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox alignment="CENTER" prefHeight="259.0" prefWidth="398.0" spacing="30.0">
+                                 <children>
+                                            <TextField fx:id="identifiant" maxWidth="250.0" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Saisir l'identifiant" />
+                                            <PasswordField fx:id="mdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Saisir mot de passe" />
+                                            <PasswordField fx:id="confirmMdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Confirmation du mot de passe" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </VBox>
+                        <VBox maxHeight="200.0" prefHeight="227.0" prefWidth="350.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Rôle du compte" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox alignment="CENTER" prefHeight="160.0" prefWidth="348.0">
+                                 <children>
+                                            <ComboBox fx:id="grade" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Choisissez le grade du compte" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <TextField fx:id="identifiant" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Saisir l'identifiant"/>
-                                <PasswordField fx:id="mdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Saisir mot de passe">
-                                    <HBox.margin>
-                                        <Insets left="200.0" />
-                                    </HBox.margin>
-                                </PasswordField>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="75.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <PasswordField fx:id="confirmMdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Confirmation du mot de passe"/>
-                                <ComboBox fx:id="grade" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="grade"/>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="75.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Ajouter le compte" onMouseClicked="#onCreateButton" styleClass="addCommandeButton"/>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onCreateButton" styleClass="addCommandeButton" text="Ajouter le compte" />
                             </children>
                         </HBox>
                     </children>
