--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddClient.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddClient.fxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.PasswordField?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.AddClientController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white;">
@@ -29,39 +28,110 @@
                                 <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
-                        <Label styleClass="main-title" text="Création d'un compte">
-                            <VBox.margin>
-                                <Insets top="20.0" />
-                            </VBox.margin></Label>
+                  <HBox>
+                     <children>
+                        <Label minWidth="679.0" prefHeight="35.0" prefWidth="679.0" styleClass="main-title" text="Création d'un client" />
+                        <Pane prefHeight="35.0" prefWidth="192.0">
+                           <children>
+                              <VBox fx:id="errorPopup" layoutX="-201.0" layoutY="-52.0" maxHeight="114.0" minWidth="400.0" prefHeight="114.0" prefWidth="400.0" styleClass="errorPopup" visible="false">
+                                 <HBox.margin>
+                                    <Insets left="325.0" />
+                                 </HBox.margin>
+                                 <children>
+                                    <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0" styleClass="errorPopup-indicator" />
+                                    <HBox prefHeight="120.0" prefWidth="340.0" styleClass="errorPopup-container">
+                                       <children>
+                                          <Label prefHeight="17.0" prefWidth="33.0">
+                                             <padding>
+                                                <Insets left="10.0" top="17.0" />
+                                             </padding>
+                                             <graphic>
+                                                <Region styleClass="errorPopup-img" />
+                                             </graphic>
+                                          </Label>
+                                          <VBox prefHeight="110.0" prefWidth="312.0">
+                                             <children>
+                                                <Label styleClass="errorPopup-title" text="Erreur !" />
+                                                <Label fx:id="popupMessage" styleClass="errorPopup-subtitle" />
+                                             </children>
+                                             <padding>
+                                                <Insets left="15.0" top="15.0" />
+                                             </padding>
+                                          </VBox>
+                                          <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" onMouseClicked="#onClosePopup" prefHeight="28.0" prefWidth="28.0" styleClass="successPopup-close">
+                                                   <graphic>
+                                                      <Region styleClass="successPopup-close-img" />
+                                                   </graphic>
+                                                   <VBox.margin>
+                                                      <Insets right="15.0" top="20.0" />
+                                                   </VBox.margin>
+                                                </Button>
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </Pane>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="524.0" prefWidth="871.0" spacing="40.0">
+                     <children>
+                        <VBox maxHeight="350.0" maxWidth="400.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Informations du client" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox prefHeight="290.0" prefWidth="398.0" spacing="20.0">
+                                 <children>
+                                            <TextField fx:id="nom" maxWidth="300.0" minHeight="40.0" minWidth="250.0" prefHeight="40.0" prefWidth="300.0" promptText="Saisir le nom du client" />
+                                            <TextField fx:id="email" maxWidth="300.0" prefHeight="40.0" prefWidth="300.0" promptText="Saisir l'adresse e-mail" />
+                                            <TextField fx:id="numTel" maxWidth="300.0" prefHeight="40.0" prefWidth="300.0" promptText="Saisir le numéro de téléphone" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="30.0" top="50.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                        <VBox maxHeight="350.0" maxWidth="400.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Adresse de livraison du client" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox prefHeight="290.0" prefWidth="398.0" spacing="20.0">
+                                 <children>
+                                    <TextField fx:id="adresse" maxWidth="250.0" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Saisir l'adresse" />
+                                    <TextField fx:id="codePostal" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Saisir le code postal" />
+                                    <TextField fx:id="city" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Saisir la ville" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="30.0" top="40.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <TextField fx:id="identifiant" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Saisir l'identifiant"/>
-                                <PasswordField fx:id="mdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Saisir mot de passe">
-                                    <HBox.margin>
-                                        <Insets left="200.0" />
-                                    </HBox.margin>
-                                </PasswordField>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="75.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <PasswordField fx:id="confirmMdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Confirmation du mot de passe"/>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="75.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Ajouter le compte" onMouseClicked="#onCreateButton" styleClass="addCommandeButton"/>
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <Label fx:id="error" styleClass="login-error"/>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onCreateButton" styleClass="addCommandeButton" text="Créer le client" />
                             </children>
                         </HBox>
                     </children>
