--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditClient.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditClient.fxml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ComboBox?>
 
-<?import javafx.scene.control.PasswordField?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.EditClientController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
@@ -20,35 +20,70 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button mnemonicParsing="false" styleClass="back-button" text="Retour" onMouseClicked="#onBackButton">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" styleClass="back-button" text="Retour">
                             <graphic>
                                 <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
-                        <Label fx:id ="title" styleClass="main-title">
+                        <Label fx:id="title" styleClass="main-title" text="Modification du client n°X">
                             <VBox.margin>
                                 <Insets top="20.0" />
                             </VBox.margin>
                         </Label>
+                  <HBox alignment="CENTER" prefHeight="524.0" prefWidth="871.0" spacing="40.0">
+                     <children>
+                        <VBox maxHeight="350.0" maxWidth="400.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Informations du client" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox prefHeight="290.0" prefWidth="398.0" spacing="20.0">
+                                 <children>
+                                    <TextField fx:id="nom" maxWidth="300.0" minHeight="40.0" minWidth="250.0" prefHeight="40.0" prefWidth="300.0" promptText="Saisir le nom du client" />
+                                    <TextField fx:id="email" maxWidth="300.0" prefHeight="40.0" prefWidth="300.0" promptText="Saisir l'adresse e-mail" />
+                                    <TextField fx:id="numTel" maxWidth="300.0" prefHeight="40.0" prefWidth="300.0" promptText="Saisir le numéro de téléphone" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="30.0" top="50.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                        <VBox maxHeight="350.0" maxWidth="400.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Adresse de livraison du client" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox prefHeight="290.0" prefWidth="398.0" spacing="20.0">
+                                 <children>
+                                    <TextField fx:id="adresse" maxWidth="250.0" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Saisir l'adresse" />
+                                    <TextField fx:id="codePostal" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Saisir le code postal" />
+                                    <TextField fx:id="city" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Saisir la ville" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="30.0" top="40.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onEditButton" styleClass="addCommandeButton" text="Modifier le client" />
+                            </children>
+                        </HBox>
                     </children>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <TextField fx:id="identifiant" minHeight="40.0" minWidth="250.0" prefWidth="150.0"/>
-                            <TextField fx:id="mdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0">
-                                <HBox.margin>
-                                    <Insets left="200.0" />
-                                </HBox.margin>
-                            </TextField>
-                        </children>
-                        <VBox.margin>
-                            <Insets top="75.0" />
-                        </VBox.margin>
-                    </HBox>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Modifier le compte" onMouseClicked="#onEditButton" styleClass="addCommandeButton"/>
-                        </children>
-                    </HBox>
                     <padding>
                         <Insets bottom="30.0" left="40.0" right="40.0" top="20.0" />
                     </padding>
